gitops-manifests/grafana-loadbalancer.yaml
# grafana-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: grafana
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
